<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/community_name"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:descendantFocusability="blocksDescendants">
        <TextView
            android:id="@+id/writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/community_writer"
            android:layout_marginStart="5dp"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/hit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/view"
            android:layout_marginEnd="5dp"
            android:text="@string/community_hit"
            android:textSize="17sp"/>
        <View
            android:id="@+id/view"
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="#000000"
            android:layout_toStartOf="@id/date"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/community_day"
            android:textSize="17sp"
            android:layout_marginEnd="5dp"/>
    </RelativeLayout>
</LinearLayout>
