<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/community_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/community_write_title"
            android:textColor="#000000"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/title">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_write_content"
            android:textColor="#000000"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="390dp"
            android:gravity="top"
            android:layout_marginTop="10dp"
            android:background="@drawable/edge_edittext"
            android:inputType="textImeMultiLine"
            android:minLines="3" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/community_write_back"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#000000"/>
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/community_write_save"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#000000"/>
    </LinearLayout>
</LinearLayout>
